renaming files, variables & fixing name bugs
