# models/Ticket.js
@@ -1,65 +1,0 @@
-const { Sequelize, DataTypes } = require('sequelize');
-const db = require('../database');
-const Employee = require('./Employee');
-const Client = require('./Client');
-
-const Ticket = db.define(
-    'Ticket',
-    {
-        ticket_id: {
-            type: DataTypes.INTEGER,
-            primaryKey: true,
-            autoIncrement: true,
-        },
-        emp_id: {
-            type: DataTypes.INTEGER,
-            allowNull: false,
-            references: {
-                model: Employee,
-                key: 'emp_id',
-            },
-        },
-        status: {
-            type: DataTypes.STRING,
-            allowNull: false,
-        },
-        priority: {
-            type: DataTypes.STRING,
-            allowNull: false,
-        },
-        contact: {
-            type: DataTypes.STRING,
-            allowNull: true,
-        },
-        subject: {
-            type: DataTypes.STRING,
-            allowNull: false,
-        },
-        description: {
-            type: DataTypes.STRING,
-            allowNull: false,
-        },
-        updated_on: {
-            type: DataTypes.STRING,
-            allowNull: false,
-        },
-        created_on: {
-            type: DataTypes.STRING,
-            allowNull: false,
-        },
-        client_id: {
-            type: DataTypes.INTEGER,
-            allowNull: false,
-            references: {
-                model: Client,
-                key: 'client_id',
-            },
-        },
-    },
-    {
-        tableName: 'infobeans_tickets',
-        timestamps: false,
-    }
-);
-
-module.exports = Ticket;
